[metadata]
name = cryotypes
description = Generalized python types and validators for cryoEM data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/teamtomo/cryotypes
author = Alister Burt, Gaifas Lorenzo
author_email = alisterburt@gmail.com, brisvag@gmail.com
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source Code =https://github.com/teamtomo/cryotypes

[options]
packages = find:
install_requires =
    numpy
    pandas
    scipy
    typing_extensions
    einops
python_requires = >=3.7
setup_requires =
    setuptools_scm
zip_safe = False

[options.extras_require]
dev =
    black
    flake8
    flake8-docstrings
    ipython
    isort
    jedi<0.18.0
    jupyter-book
    mypy
    pre-commit
    pydocstyle
    pytest
    pytest-cov
    tox
testing =
    pytest
    pytest-cov
    tox

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = -W error

[mypy]
files = cryotypes
warn_unused_configs = True
warn_unused_ignores = True
check_untyped_defs = True
implicit_reexport = False
show_column_numbers = True
show_error_codes = True
ignore_missing_imports = True
